overflow problem fixed

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -89,6 +89,6 @@
 }
 
 .section-media iframe {
-  width: 100vw;
+  width: 100%;
   height: 56.25vw;
 }
